knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/Applies_to_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_Service_Line__c</fullName>
    <inlineHelpText>Enter Service Line separated by comma e.g. CC,HM,HMTELE</inlineHelpText>
    <label>Applies to Service Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>