knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Information</fullName>
            </value>
            <value>
                <fullName>Account Team</fullName>
            </value>
            <value>
                <fullName>Approvals</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Clinician Notification (client facing)</fullName>
            </value>
            <value>
                <fullName>Connected Care</fullName>
            </value>
            <value>
                <fullName>Corporate Compliance</fullName>
            </value>
            <value>
                <fullName>Coverage Model</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Go Live</fullName>
            </value>
            <value>
                <fullName>HiOps</fullName>
            </value>
            <value>
                <fullName>Hospital Overview</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Initiate Implementation</fullName>
            </value>
            <value>
                <fullName>Leaseback Info</fullName>
            </value>
            <value>
                <fullName>Leased Clinicians</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Managed Care</fullName>
            </value>
            <value>
                <fullName>Managed Care/Enrollment</fullName>
            </value>
            <value>
                <fullName>NPPA Compliance</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Operations MSL</fullName>
            </value>
            <value>
                <fullName>Operations PCC</fullName>
            </value>
            <value>
                <fullName>Operations Recruiter</fullName>
            </value>
            <value>
                <fullName>Orientation/Training</fullName>
            </value>
            <value>
                <fullName>Practice Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>