knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/cisco_webex__Webex_Call_History_Id__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webex_Call_History_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Webex Call History Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>