knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/cisco_webex__Webex_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webex_Meeting_Id__c</fullName>
    <label>Webex Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>