knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/FQ_State__c.field-meta.xml
<CustomField>
    <fullName>FQ_State__c</fullName>
    <description>Foreign Qualification state. Used on Task records (Corporate Entity record type) to differentiate filings for an entity registered to do business in a state outside its state of formation.</description>
    <inlineHelpText>Foreign Qualification state — the state in which the entity is registered to do business outside its state of formation.</inlineHelpText>
    <label>FQ State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StateGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>