knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/Legacy_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Task_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Source Task Id from sgcorp-prod. Used for migration traceability and idempotent upsert operations.</description>
    <externalId>true</externalId>
    <label>Legacy Task ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>