knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/State_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Formation__c</fullName>
    <description>The US state in which the corporate entity was formed. Used on Task records (Corporate Entity record type) to support corporate compliance filings.</description>
    <label>State of Formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StateGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>