knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/SubjectFormula__c.field-meta.xml
<CustomField>
    <fullName>SubjectFormula__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubjectFormula</label>
    <type>Text</type>
</CustomField>