knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Activity/fields/Total_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Total_Attachments__c</fullName>
    <label>Total Attachments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>